added tour and busess routes
