# src/model/Buss.model.ts
@@ -1,16 +1,12 @@
-
-import { Schema, model } from 'mongoose';
-import { IBUSS } from '../types/document/IBUSS';
+import { Schema, model } from "mongoose";
+import { IBUSS } from "../types/document/IBUSS";
 const IBussSchema = new Schema(
   {
-    BusName: { type: String  },
-    BussSeats:{ type: String }, 
-    BussBokingDates: { type: String },
-
+    BusName: { type: String },
+    BussSeats: { type: String },
+    StartDate: { type: String },
+    EndDate: { type: String },
   },
-  { timestamps: true },
-   
+  { timestamps: true }
 );
-export const BUSSSchema = model<IBUSS>('IBUSS_Schema', IBussSchema);
-
-// _id, BussName, BussSeats, BussBokingDates
+export const BUSSSchema = model<IBUSS>("IBUSS_Schema", IBussSchema);
