# src/types/Request/Tour.request.ts
@@ -1,0 +1,8 @@
+export interface ISaveReqTour {
+  ManagerName: string;
+  Destination: string;
+  NumberOfParticipants: string;
+  // BussSeats:string[] ,
+  TourStartDate: string;
+  TourEndDate: string;
+}
