# src/types/document/IBUSS.ts
@@ -1,9 +1,10 @@
-import { Document } from 'mongoose';
+import { Document } from "mongoose";
 export interface IBUSS extends Document {
-  _id:string;
-  BusName: string ,
-  BussSeats:string , 
-  BussBokingDates:  string ,
+  _id: string,
+  BusName: string,
+  BussSeats: string,
+ StartDate: string ,
+  EndDate: string ,
   createdAt?: string;
   updatedAt?: string;
 }
